@@ -19,4 +19,6 @@ Section1:
   CONFIG_SUPPORT_TOKEN: CONFIG_SUPPORT_TOKEN_ENV
   SECRET_TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
   SECRET_TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
+  _TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
+  _TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
 #
