@@ -13,6 +13,7 @@
 21-Jun-2019  - V0.18 Change development workflow
 11-Aug-2019  - V0.19 Add support for configuration secrets
 12-Aug-2019  - V0.20 Revise naming API, update documentation and dependencies
+13-Aug-2019  - V0.21 Recognize options with leading underscores as secrets.
 
 
 
